k8s-manifests/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: appointment-service
