k8s-manifests/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: patient-service
